--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     Movie Hangman Revision
     Author:  Anthony Huang
     Date:    11/08/2023
-    Filename: main.html
+    Filename: index.html
     
  -->
 
