--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     Movie Hangman Revision
     Author:  Anthony Huang
     Date:    11/08/2023
-    Filename: index.html
     
  -->
 
@@ -13,7 +12,7 @@
     <title>Movie Hangman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" 
-          href="anthonylogo.jpg" />
+          href="gengar.png" />
   </head>
   <body>
     <main>
